2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	ARM64 grub-file and grub-mkconfig support.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove leftover options defines.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/arm64/linux.h: Remove leftovers. Add missing prefixes.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/arm64/linux.c: Add missing bracket.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Add arm64-efi recognition to grub-file.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ia64-efi recognition in grub-file.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Recognize raspberry pi kernel in grub-file.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable cache on ARM U-Boot port.

	Without it the port is reidiculously slow.

2013-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ARM cache maintainance.

	More code was converted from ASM to C for easier handling.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/cache.c (grub_arm_disable_caches_mmu): Use v6
	algorithm on v5.

	Suggested by: Leif Lindholm.

2013-12-22  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-mkconfig.in: Fix Xen platform conditions.

2013-12-22  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-mkrescue.c: Split single help message string in several
	strings used in previous shell version.

2013-12-22  Leif Lindholm <leif.lindholm@linaro.org>

	Add arm64 Linux loader.

2013-12-22  Leif Lindholm <leif.lindholm@linaro.org>

	Add grub_fdt_create_empty_tree() and grub_fdt_set_prop64().

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add module loading and parsing boot time checkpoints.

2013-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/arm/linux.c: Pass arguments through on ATAG
	platforms.

2013-12-22  Lars Wendler <polynomial-c@gentoo.org>

	* util/grub-mkconfig.in: Skip non-executable files.
